[package]
name = "rustls_demo_client_cert"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
rustls = { git = "https://github.com/rustls/rustls" }
security-framework = { version = "2.4", features = ["OSX_10_14","OSX_10_13","OSX_10_12","OSX_10_11","OSX_10_10","OSX_10_9"] }
webpki-roots = "0.22"
